src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section4__test__evaluate@chr10-92994-95183-NFE.snap
---
source: src/strucvars/eval/dup/section4.rs
expression: evaluator.evaluate(&strucvar)?
---
- g4:
    g4o:
      suggested_score: 0
      overlaps:
        - overlap: 1
          record:
            exac_cnv:
              chrom: "10"
              start: 92994
              stop: 95183
              svType: CNV_TYPE_DUP
              population: POPULATION_FIN
        - overlap: 1
          record:
            exac_cnv:
              chrom: "10"
              start: 92994
              stop: 95183
              svType: CNV_TYPE_DUP
              population: POPULATION_FIN

