src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section4__test__handle_clinvar_benign@VCV000032948.snap
---
source: src/strucvars/eval/dup/section4.rs
expression: "evaluator.handle_clinvar_benign(&sv_interval, &clinvar_records)?"
---
G4:
  G4N:
    overlaps:
      - overlap: 1
        record:
          release: GRCh37
          chromosome: "17"
          start: 44223908
          stop: 44694283
          reference: ~
          alternative: ~
          inner_start: 44223908
          inner_stop: ~
          outer_start: 44694283
          outer_stop: ~
          variant_type: 0
          vcv: VCV000032948
          reference_assertions:
            - rcv: RCV000050262
              title: "GRCh38/hg38 17q21.31(chr17:46111075-46661960)x1 AND See cases"
              clinical_significance: 4
              review_status: 3
      - overlap: 0.8463486
        record:
          release: GRCh37
          chromosome: "17"
          start: 44138513
          stop: 44694283
          reference: ~
          alternative: ~
          inner_start: 44138513
          inner_stop: ~
          outer_start: 44694283
          outer_stop: ~
          variant_type: 0
          vcv: VCV000057467
          reference_assertions:
            - rcv: RCV000051174
              title: "GRCh38/hg38 17q21.31(chr17:46061147-46661960)x1 AND See cases"
              clinical_significance: 4
              review_status: 3

