src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section4__test__handle_clinvar_pathogenic@VCV000806586.snap
---
source: src/strucvars/eval/dup/section4.rs
expression: "evaluator.handle_clinvar_pathogenic(&sv_interval, &clinvar_records)?"
---
g4:
  g4patho:
    overlaps:
      - overlap: 1
        record:
          release: GRCh37
          chromosome: "10"
          start: 55581618
          stop: 56288162
          innerStart: 55581618
          outerStart: 56288162
          variantType: VARIANT_TYPE_DUPLICATION
          vcv: VCV000806586
          referenceAssertions:
            - rcv: RCV000994529
              title: "GRCh37/hg19 10q21.1(chr10:55581618-56288162)x6 AND not provided"
              clinicalSignificance: CLINICAL_SIGNIFICANCE_LIKELY_PATHOGENIC
              reviewStatus: REVIEW_STATUS_CRITERIA_PROVIDED_SINGLE_SUBMITTER

