src/strucvars/eval/dup/snapshots/scarus__strucvars__eval__dup__section4__test__handle_gnomad_sv@chr10-92994-95183-NFE.snap
---
source: src/strucvars/eval/dup/section4.rs
expression: evaluator.handle_gnomad_sv(&sv_interval)?
---
G4:
  G4O:
    suggested_score: 0
    overlaps:
      - overlap: 1
        record:
          exac_cnv:
            chrom: "10"
            start: 92994
            stop: 95183
            sv_type: 1
            population: 3
      - overlap: 1
        record:
          exac_cnv:
            chrom: "10"
            start: 92994
            stop: 95183
            sv_type: 1
            population: 3

